--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "next": "13.4.4",
@@ -24,5 +27,8 @@
     "react-toastify": "^9.1.3",
     "supports-color": "^9.3.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "chalk": "^5.2.0"
   }
 }
