--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@headlessui/react": "^1.7.15",
     "@mui/material": "^5.13.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "flowbite": "^1.6.6",
-    "flowbite-react": "^0.4.7",
+    "cloudinary": "^1.37.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "next": "13.4.4",
@@ -32,6 +30,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "chalk": "^5.2.0"
+    "chalk": "^5.2.0",
+    "daisyui": "^3.1.7"
   }
 }
