--- a/package.json
+++ b/package.json
@@ -15,22 +15,19 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "cloudinary": "^1.37.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
-    "next": "13.4.4",
+    "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
-    "react-toastify": "^9.1.3",
     "supports-color": "^9.3.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "chalk": "^5.2.0",
-    "daisyui": "^3.1.7"
+    "chalk": "^5.2.0"
   }
 }
